Re-enable pretty-printed ExecutionMode test names

Fix ODR violation with ExecutionMode by declaring the streaming operator in the
same header as the type, and add back the GetParamNameForTest calls that use
that operator.

Also add a streaming operator for ChromePromptValue so that all types declared
in constants.h can be pretty-printed.

R=proberge

Bug: 872748
Change-Id: Idfe3f6044f97b003f17d83c6985d442f9b4103f6
Reviewed-on: https://chromium-review.googlesource.com/1170852
Commit-Queue: Joe Mason <joenotcharles@chromium.org>
Reviewed-by: proberge <proberge@chromium.org>
Cr-Commit-Position: refs/heads/master@{#582285}
Former-commit-id: 29182424f4d1c29a0914e09916a198f4d1a4897a