chrome/chrome_cleaner/logging/cleaner_logging_service_unittest.cc
@@ -37,6 +37,7 @@
 #include "chrome/chrome_cleaner/proto/shared_pup_enums.pb.h"
 #include "chrome/chrome_cleaner/pup_data/pup_data.h"
 #include "chrome/chrome_cleaner/test/test_file_util.h"
+#include "chrome/chrome_cleaner/test/test_name_helper.h"
 #include "chrome/chrome_cleaner/test/test_settings_util.h"
 #include "chrome/chrome_cleaner/test/test_task_scheduler.h"
 #include "components/chrome_cleaner/public/constants/constants.h"
@@ -1430,6 +1431,7 @@ TEST_P(CleanerLoggingServiceTest, AllExpectedRemovalsConfirmed) {
 INSTANTIATE_TEST_CASE_P(All,
                         CleanerLoggingServiceTest,
                         testing::Values(ExecutionMode::kScanning,
-                                        ExecutionMode::kCleanup));
+                                        ExecutionMode::kCleanup),
+                        GetParamNameForTest());
 
 }  // namespace chrome_cleaner
